--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Your friend, Correspondece and collaboration 당신의 친구, 대화와 협업
+title: Your friend 당신의 친구 
 email: taeyoon@sfpc.io
 description: > # letters and collaboration with artist friends
 baseurl: "/yourfriend" # the subpath of your site, e.g. /blog/
